--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-hrm-login></app-hrm-login>
-<router-outlet></router-outlet>
+  <app-hrm-login></app-hrm-login>
+  <!-- <app-dashboard ></app-dashboard> -->
+  <router-outlet></router-outlet>
