--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,37 +4,16 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 .app-layout {
   min-height: 100vh;
 }
-
-.menu-sidebar {
-  position: relative;
-  z-index: 10;
-  min-height: 100vh;
-  box-shadow: 2px 0 6px rgba(0,21,41,.35);
-}
-
-.header-trigger {
-  height: 64px;
-  padding: 20px 24px;
-  font-size: 20px;
-  cursor: pointer;
-  transition: all .3s,padding 0s;
-}
-
-.trigger:hover {
-  color: #1890ff;
-}
-
 .sidebar-logo {
   position: relative;
   height: 64px;
   padding-left: 24px;
   overflow: hidden;
   line-height: 64px;
-  background: #001529;
+  background: #fff;
   transition: all .3s;
 }
 
@@ -48,33 +27,77 @@
 .sidebar-logo h1 {
   display: inline-block;
   margin: 0 0 0 20px;
-  color: #fff;
+  color: rgb(134, 240, 93);
   font-weight: 600;
   font-size: 14px;
   font-family: Avenir,Helvetica Neue,Arial,Helvetica,sans-serif;
   vertical-align: middle;
 }
 
-nz-header {
-  padding: 0;
-  width: 100%;
-  z-index: 2;
-}
-
-.app-header {
-  position: relative;
-  height: 64px;
-  padding: 0;
-  background: #fff;
-  box-shadow: 0 1px 4px rgba(0,21,41,.08);
-}
-
-nz-content {
-  margin: 24px;
-}
-
 .inner-content {
   padding: 24px;
   background: #fff;
   height: 100%;
+}
+.trigger {
+  font-size: 18px;
+  line-height: 64px;
+  padding: 0 24px;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+.logo {
+  height: 32px;   
+  margin: 16px 16px 15px 16px;
+  font-weight: 500;
+  font-size: 16px;
+  text-align: center;
+  color: #1890ff
+}
+
+nz-layout {
+    height: 100vh;
+}
+nz-header {
+  background: #fff;
+  padding: 0;
+  border-bottom: 1px solid #d7dee9;
+}
+
+nz-content {
+  margin: 16px;
+}
+
+nz-breadcrumb {
+  margin: 16px 0;
+}
+
+nz-footer {
+  text-align: center;
+}
+
+nz-sider {
+    background: #fff;
+    border-right: 1px solid #d7dee9;
+}
+
+.ant-menu-inline {
+  border-top: 1px solid #d7dee9;
+}
+
+.user-area {
+  float: right; margin-right:24px;
+}
+
+.user-area span {
+    margin-right: 16px;
+}
+
+.head-example {
+  width: 32px;
+  height: 32px;
+  border-radius: 4px;
+  background: #eee;
+  vertical-align: middle;
 }
