--- a/src/app/modules/shared/certification/certification.component.html
+++ b/src/app/modules/shared/certification/certification.component.html
@@ -1,1 +1,2 @@
-<p>certification works!</p>
+<button nz-button  nzType="link" [routerLink]="['create']">Create Certification</button>
+<app-certification-list></app-certification-list>
