--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,9 @@
                     <li nz-menu-item nzMatchRouter>
                         <a routerLink="settings/designation">Designation</a>
                     </li>
+                    <li nz-menu-item nzMatchRouter>
+                        <a routerLink="settings/certification">Certification</a>
+                    </li>
                 </ul>
             </li>
             <li nz-submenu nzTitle="HRM" nzIcon="appstore" nzTheme="outline">
