--- a/src/app/modules/shared/certification/create-certification/create-certification.component.html
+++ b/src/app/modules/shared/certification/create-certification/create-certification.component.html
@@ -1,1 +1,32 @@
-<p>create-certification works!</p>
+<nz-page-header-title>Certification</nz-page-header-title>
+<form nz-form [formGroup]="certificationForm">
+    <nz-form-item>
+      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="CertificationId" nzRequired>Certification Id</nz-form-label>
+      <nz-form-control [nzSm]="14" [nzXs]="24" >
+        <input nz-input type="text" formControlName="CertificationId" id="CertificationId" />
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="CertificationName" nzRequired>Certification Name</nz-form-label>
+      <nz-form-control [nzSm]="14" [nzXs]="24" >
+        <input nz-input type="text" formControlName="CertificationName" id="CertificationName" />
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="Description" nzRequired>Description</nz-form-label>
+      <nz-form-control [nzSm]="14" [nzXs]="24" >
+        <input nz-input type="text" formControlName="Description"  />
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="CompanyId" nzRequired>Company Id</nz-form-label>
+      <nz-form-control [nzSm]="14" [nzXs]="24" >
+        <input nz-input type="text" formControlName="CompanyId" id="CompanyId"/>
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item nz-row class="register-area">
+      <nz-form-control [nzSpan]="14" [nzOffset]="6">
+        <button nz-button nzType="primary">Save</button>
+      </nz-form-control>
+    </nz-form-item>
+  </form>
