--- a/src/app/modules/shared/client/client.component.html
+++ b/src/app/modules/shared/client/client.component.html
@@ -1,1 +1,2 @@
-<p>client works!</p>
+<button nz-button  nzType="link" [routerLink]="['create']">Create Client</button>
+<app-client-list></app-client-list>
