--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,54 +10,54 @@
             <li nz-submenu nzTitle="Settings" nzIcon="transaction" nzTheme="outline">
                 <ul>
                     <li nz-menu-item nzMatchRouter>
-                        <a routerLink="settings/company">Company</a>
+                        <a routerLink="dashboard/settings/company">Company</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
-                        <a routerLink="settings/department">Department</a>
+                        <a routerLink="dashboard/settings/department">Department</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
-                        <a routerLink="settings/designation">Designation</a>
+                        <a routerLink="dashboard/settings/designation">Designation</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
-                        <a routerLink="settings/certification">Certification</a>
+                        <a routerLink="dashboard/settings/certification">Certification</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
-                        <a routerLink="settings/client">Client</a>
+                        <a routerLink="dashboard/settings/client">Client</a>
                     </li>
                 </ul>
             </li>
             <li nz-submenu nzTitle="HRM" nzIcon="appstore" nzTheme="outline">
                 <ul>
                     <li nz-menu-item nzMatchRouter>
-                        <a routerLink="hrm/employee">Employee</a>
+                        <a routerLink="dashboard/hrm/employee">Employee</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
-                        <a routerLink="hrm/employee-attendance">Employee Attendance</a>
+                        <a routerLink="dashboard/hrm/employee-attendance">Employee Attendance</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
-                        <a routerLink="hrm/employee-salary">Employee Salary</a>
+                        <a routerLink="dashboard/hrm/employee-salary">Employee Salary</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
-                        <a routerLink="hrm/employee-project">Employee Project</a>
+                        <a routerLink="dashboard/hrm/employee-project">Employee Project</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
-                        <a routerLink="hrm/employee-leave">Employee Leave</a>
+                        <a routerLink="dashboard/hrm/employee-leave">Employee Leave</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
-                        <a routerLink="hrm/employee-training">Employee Training</a>
+                        <a routerLink="dashboard/hrm/employee-training">Employee Training</a>
                     </li>
                 </ul>
             </li>
             <li nz-submenu nzOpen nzTitle="Payroll" nzIcon="ungroup" nzTheme="outline">
                 <ul>
                     <li nz-menu-item nzMatchRouter>
-                        <a routerLink="hrm/employee-loan">Employee Loan</a>
+                        <a routerLink="dashboard/hrm/employee-loan">Employee Loan</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
-                        <a routerLink="hrm/employee-payroll">Employee Payroll</a>
+                        <a routerLink="dashboard/hrm/employee-payroll">Employee Payroll</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
-                        <a routerLink="hrm/employee-tax">Employee Tax</a>
+                        <a routerLink="dashboard/hrm/employee-tax">Employee Tax</a>
                     </li>
                 </ul>
             </li>
