--- a/src/app/modules/shared/company/company-list/company-list.component.html
+++ b/src/app/modules/shared/company/company-list/company-list.component.html
@@ -1,4 +1,5 @@
 <div class="table-operations">
+  <button nz-button  [routerLink]="['create']">Create a Company</button>
   <button nz-button >Sort age</button>
   <button nz-button >Clear filters</button>
   <button nz-button >Clear filters and sorters</button>
