--- a/src/app/modules/hrm/employee-leave/employee-leave-list/employee-leave-list.component.html
+++ b/src/app/modules/hrm/employee-leave/employee-leave-list/employee-leave-list.component.html
@@ -1,10 +1,11 @@
 <div class="table-operations">
-    <button nz-button >Sort age</button>
-    <button nz-button >Clear filters</button>
-    <button nz-button >Clear filters and sorters</button>
-  </div>
-  <nz-table #filterTable nzTableLayout="fixed">
-    <thead>
+  <button nz-button [routerLink]="['create']">Create Leave</button>
+  <button nz-button>Sort age</button>
+  <button nz-button>Clear filters</button>
+  <button nz-button>Clear filters and sorters</button>
+</div>
+<nz-table #filterTable nzTableLayout="fixed">
+  <thead>
     <tr>
       <th>LeaveId</th>
       <th>EmployeeId</th>
@@ -17,25 +18,27 @@
       <th>UserId</th>
       <th>Actions</th>
     </tr>
-    </thead>
-    <tbody>
+  </thead>
+  <tbody>
     <tr *ngFor="let data of _leaveList">
       <td>{{ data.leaveId }}</td>
       <td>{{ data.employeeId }}</td>
       <td>{{ data.month }}</td>
-      <td>{{ data.startDate  }}</td>
+      <td>{{ data.startDate }}</td>
       <td>{{ data.endDate }}</td>
       <td>{{ data.noOfDays }}</td>
       <td>{{ data.leavePeriod }}</td>
-      <td>{{ data.companyId  }}</td>
-      <td>{{ data.userId  }}</td>
+      <td>{{ data.companyId }}</td>
+      <td>{{ data.userId }}</td>
       <td>
         <nz-button-group>
-          <button nz-button nzType="primary" [routerLink]="['update/',data.leaveId]"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
-          <button nz-button nzType="primary" (click)="deleteLeave(data.leaveId)"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+          <button nz-button nzType="primary" [routerLink]="['update/',data.leaveId]"><i nz-icon nzType="edit"
+              nzTheme="outline"></i></button>
+          <button nz-button nzType="primary" (click)="deleteLeave(data.leaveId)"><i nz-icon nzType="delete"
+              nzTheme="outline"></i></button>
           <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
         </nz-button-group>
       </td>
     </tr>
-    </tbody>
-  </nz-table>
+  </tbody>
+</nz-table>
