--- a/src/app/modules/hrm/employee-loan/employee-loan-list/employee-loan-list.component.html
+++ b/src/app/modules/hrm/employee-loan/employee-loan-list/employee-loan-list.component.html
@@ -1,10 +1,11 @@
 <div class="table-operations">
-    <button nz-button >Sort age</button>
-    <button nz-button >Clear filters</button>
-    <button nz-button >Clear filters and sorters</button>
-  </div>
-  <nz-table #filterTable  nzTableLayout="fixed">
-    <thead>
+  <button nz-button [routerLink]="['create']">Create Loan</button>
+  <button nz-button>Sort age</button>
+  <button nz-button>Clear filters</button>
+  <button nz-button>Clear filters and sorters</button>
+</div>
+<nz-table #filterTable nzTableLayout="fixed">
+  <thead>
     <tr>
       <th>LoanId</th>
       <th>EmployeeId</th>
@@ -21,29 +22,31 @@
       <th>UserId</th>
       <th>Actions</th>
     </tr>
-    </thead>
-    <tbody>
+  </thead>
+  <tbody>
     <tr *ngFor="let data of _loanList">
       <td>{{ data.loanId }}</td>
       <td>{{ data.employeeId }}</td>
       <td>{{ data.typeOfLoan }}</td>
-      <td>{{ data.dateOfApplication  }}</td>
+      <td>{{ data.dateOfApplication }}</td>
       <td>{{ data.proposedAmount }}</td>
       <td>{{ data.noOfInstRecovery }}</td>
       <td>{{ data.startDateOfRecovery }}</td>
-      <td>{{ data.endDateOfRecovery  }}</td>
+      <td>{{ data.endDateOfRecovery }}</td>
       <td>{{ data.noOfDays }}</td>
       <td>{{ data.interestRate }}</td>
       <td>{{ data.interestAmount }}</td>
-      <td>{{ data.companyId  }}</td>
+      <td>{{ data.companyId }}</td>
       <td>{{ data.userId }}</td>
       <td>
         <nz-button-group>
-          <button nz-button nzType="primary" [routerLink]="['update/',data.loanId]"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
-          <button nz-button nzType="primary" (click)="deleteLoan(data.loanId)"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+          <button nz-button nzType="primary" [routerLink]="['update/',data.loanId]"><i nz-icon nzType="edit"
+              nzTheme="outline"></i></button>
+          <button nz-button nzType="primary" (click)="deleteLoan(data.loanId)"><i nz-icon nzType="delete"
+              nzTheme="outline"></i></button>
           <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
         </nz-button-group>
       </td>
     </tr>
-    </tbody>
-  </nz-table>
+  </tbody>
+</nz-table>
