--- a/src/app/modules/hrm/employee-tax/employee-tax-list/employee-tax-list.component.html
+++ b/src/app/modules/hrm/employee-tax/employee-tax-list/employee-tax-list.component.html
@@ -1,10 +1,11 @@
 <div class="table-operations">
-    <button nz-button >Sort age</button>
-    <button nz-button >Clear filters</button>
-    <button nz-button >Clear filters and sorters</button>
-  </div>
-  <nz-table #filterTable nzTableLayout="fixed">
-    <thead>
+  <button nz-button [routerLink]="['create']">Create Tax</button>
+  <button nz-button>Sort age</button>
+  <button nz-button>Clear filters</button>
+  <button nz-button>Clear filters and sorters</button>
+</div>
+<nz-table #filterTable nzTableLayout="fixed">
+  <thead>
     <tr>
       <th>TaxesId</th>
       <th>EmployeeId</th>
@@ -15,23 +16,25 @@
       <th>CompanyId</th>
       <th>Actions</th>
     </tr>
-    </thead>
-    <tbody>
+  </thead>
+  <tbody>
     <tr *ngFor="let data of _taxList">
       <td>{{ data.taxesId }}</td>
       <td>{{ data.employeeId }}</td>
       <td>{{ data.taxName }}</td>
-      <td>{{ data.taxValue  }}</td>
+      <td>{{ data.taxValue }}</td>
       <td>{{ data.status }}</td>
-      <td>{{ data.userId  }}</td>
-      <td>{{ data.companyId  }}</td>
+      <td>{{ data.userId }}</td>
+      <td>{{ data.companyId }}</td>
       <td>
         <nz-button-group>
-          <button nz-button nzType="primary" [routerLink]="['update/',data.taxesId]"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
-          <button nz-button nzType="primary" (click)="deleteTax(data.taxesId)" ><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+          <button nz-button nzType="primary" [routerLink]="['update/',data.taxesId]"><i nz-icon nzType="edit"
+              nzTheme="outline"></i></button>
+          <button nz-button nzType="primary" (click)="deleteTax(data.taxesId)"><i nz-icon nzType="delete"
+              nzTheme="outline"></i></button>
           <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
         </nz-button-group>
       </td>
     </tr>
-    </tbody>
-  </nz-table>
+  </tbody>
+</nz-table>
