--- a/src/app/modules/shared/certification/certification-list/certification-list.component.html
+++ b/src/app/modules/shared/certification/certification-list/certification-list.component.html
@@ -1,10 +1,11 @@
 <div class="table-operations">
-    <button nz-button >Sort age</button>
-    <button nz-button >Clear filters</button>
-    <button nz-button >Clear filters and sorters</button>
-  </div>
-  <nz-table #filterTable nzTableLayout="fixed">
-    <thead>
+  <button nz-button [routerLink]="['create']">Create Certification</button>
+  <button nz-button>Sort age</button>
+  <button nz-button>Clear filters</button>
+  <button nz-button>Clear filters and sorters</button>
+</div>
+<nz-table #filterTable nzTableLayout="fixed">
+  <thead>
     <tr>
       <th>Employee Id</th>
       <th>First Name</th>
@@ -19,9 +20,9 @@
       <th>User Id</th>
       <th>Actions</th>
     </tr>
-    </thead>
-    <tbody>
-    <tr >
+  </thead>
+  <tbody>
+    <tr>
       <td></td>
       <td></td>
       <td></td>
@@ -35,11 +36,12 @@
       <td></td>
       <td>
         <nz-button-group>
-          <button nz-button nzType="primary" [routerLink]="['update/:id']"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
-          <button nz-button nzType="primary" ><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+          <button nz-button nzType="primary" [routerLink]="['update/:id']"><i nz-icon nzType="edit"
+              nzTheme="outline"></i></button>
+          <button nz-button nzType="primary"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
           <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
         </nz-button-group>
       </td>
     </tr>
-    </tbody>
-  </nz-table>
+  </tbody>
+</nz-table>
