--- a/src/app/modules/shared/department/department-list/department-list.component.html
+++ b/src/app/modules/shared/department/department-list/department-list.component.html
@@ -1,10 +1,11 @@
 <div class="table-operations">
-    <button nz-button >Sort age</button>
-    <button nz-button >Clear filters</button>
-    <button nz-button >Clear filters and sorters</button>
-  </div>
-  <nz-table #filterTable  nzTableLayout="fixed">
-    <thead>
+  <button nz-button [routerLink]="['create']">Create Department</button>
+  <button nz-button>Sort age</button>
+  <button nz-button>Clear filters</button>
+  <button nz-button>Clear filters and sorters</button>
+</div>
+<nz-table #filterTable nzTableLayout="fixed">
+  <thead>
     <tr>
       <th>Department Id</th>
       <th>Employee Id</th>
@@ -13,21 +14,23 @@
       <th>CompanyId</th>
       <th>Actions</th>
     </tr>
-    </thead>
-    <tbody>
+  </thead>
+  <tbody>
     <tr *ngFor="let data of _departmentList">
       <td>{{ data.departmentId }}</td>
       <td>{{ data.employeeId }}</td>
       <td>{{ data.departmentName }}</td>
-      <td>{{ data.userId  }}</td>
-      <td>{{ data.companyId  }}</td>
+      <td>{{ data.userId }}</td>
+      <td>{{ data.companyId }}</td>
       <td>
         <nz-button-group>
-          <button nz-button nzType="primary" [routerLink]="['update/', data.departmentId]"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
-          <button nz-button nzType="primary" (click)="deleteDepartment(data.departmentId)" ><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+          <button nz-button nzType="primary" [routerLink]="['update/', data.departmentId]"><i nz-icon nzType="edit"
+              nzTheme="outline"></i></button>
+          <button nz-button nzType="primary" (click)="deleteDepartment(data.departmentId)"><i nz-icon nzType="delete"
+              nzTheme="outline"></i></button>
           <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
-        </nz-button-group>  
+        </nz-button-group>
       </td>
     </tr>
-    </tbody>
-  </nz-table>
+  </tbody>
+</nz-table>
