--- a/src/app/modules/shared/certification/certification-list/certification-list.component.html
+++ b/src/app/modules/shared/certification/certification-list/certification-list.component.html
@@ -7,38 +7,22 @@
 <nz-table #filterTable nzTableLayout="fixed">
   <thead>
     <tr>
-      <th>Employee Id</th>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Birth Date</th>
-      <th>Age</th>
-      <th>Sex</th>
-      <th>Address</th>
-      <th>Join Date</th>
-      <th>Leave Date</th>
-      <th>Company Id</th>
-      <th>User Id</th>
+      <th>#</th>
+      <th>Certificaiton Name</th>
+      <th>Description</th>
       <th>Actions</th>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+    <tr *ngFor="let data of certificaitonList;index as i">
+      <td>{{ i + 1 }}</td>
+      <td>{{ data.certificationName }}</td>
+      <td>{{ data.description }}</td>
       <td>
         <nz-button-group>
-          <button nz-button nzType="primary" [routerLink]="['update/:id']"><i nz-icon nzType="edit"
+          <button nz-button nzType="primary" [routerLink]="['update/', data.certificationId]"><i nz-icon nzType="edit"
               nzTheme="outline"></i></button>
-          <button nz-button nzType="primary"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+          <button nz-button nzType="primary"  (click)="deleteCertification(data.certificationId)"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
           <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
         </nz-button-group>
       </td>
