--- a/src/app/modules/shared/certification/update-certification/update-certification.component.html
+++ b/src/app/modules/shared/certification/update-certification/update-certification.component.html
@@ -1,11 +1,11 @@
 <nz-page-header-title>Certification</nz-page-header-title>
-<form nz-form [formGroup]="certificationForm">
-    <nz-form-item>
+<form nz-form [formGroup]="certificationForm" (ngSubmit)="onUpdate()">
+    <!-- <nz-form-item>
       <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="CertificationId" nzRequired>Certification Id</nz-form-label>
       <nz-form-control [nzSm]="14" [nzXs]="24" >
         <input nz-input type="text" formControlName="CertificationId" id="CertificationId" />
       </nz-form-control>
-    </nz-form-item>
+    </nz-form-item> -->
     <nz-form-item>
       <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="CertificationName" nzRequired>Certification Name</nz-form-label>
       <nz-form-control [nzSm]="14" [nzXs]="24" >
@@ -18,12 +18,12 @@
         <input nz-input type="text" formControlName="Description"  />
       </nz-form-control>
     </nz-form-item>
-    <nz-form-item>
+    <!-- <nz-form-item>
       <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="CompanyId" nzRequired>Company Id</nz-form-label>
       <nz-form-control [nzSm]="14" [nzXs]="24" >
         <input nz-input type="text" formControlName="CompanyId" id="CompanyId"/>
       </nz-form-control>
-    </nz-form-item>
+    </nz-form-item> -->
     <nz-form-item nz-row class="register-area">
       <nz-form-control [nzSpan]="14" [nzOffset]="6">
         <button nz-button nzType="primary">Save</button>
