--- a/src/app/modules/shared/client/client-list/client-list.component.html
+++ b/src/app/modules/shared/client/client-list/client-list.component.html
@@ -7,38 +7,34 @@
 <nz-table #filterTable nzTableLayout="fixed">
   <thead>
     <tr>
-      <th>Employee Id</th>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Birth Date</th>
-      <th>Age</th>
-      <th>Sex</th>
+      <th>#</th>
+      <th>ClientName</th>
+      <th>Details</th>
       <th>Address</th>
-      <th>Join Date</th>
-      <th>Leave Date</th>
-      <th>Company Id</th>
-      <th>User Id</th>
+      <th>Contact Number</th>
+      <th>Contact Email</th>
+      <th>Company Url</th>
+      <th>Status</th>
+      <th>First Contact Date</th>
       <th>Actions</th>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+    <tr *ngFor="let data of clientList;index as i">
+      <td>{{ i + 1 }}</td>
+      <td>{{ data.clientName }}</td>
+      <td>{{ data.details }}</td>
+      <td>{{ data.address }}</td>
+      <td>{{ data.contactNumber }}</td>
+      <td>{{ data.contactEmail }}</td>
+      <td>{{ data.companyUrl }}</td>
+      <td>{{ data.status }}</td>
+      <td>{{ data.firstContactDate }}</td>
       <td>
         <nz-button-group>
-          <button nz-button nzType="primary" [routerLink]="['update/:id']"><i nz-icon nzType="edit"
+          <button nz-button nzType="primary" [routerLink]="['update/', data.clientId]"><i nz-icon nzType="edit"
               nzTheme="outline"></i></button>
-          <button nz-button nzType="primary"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+          <button nz-button nzType="primary" onclick="deleteClient(data.clientId)"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
           <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
         </nz-button-group>
       </td>
