--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
                         <a routerLink="dashboard/settings/company">Company</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
-                        <a routerLink="dashboard/settings/department">Department</a>
+                        <a routerLink="dashboard/settings/education">Education</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
                         <a routerLink="dashboard/settings/designation">Designation</a>
