--- a/src/app/modules/shared/education/education-list/education-list.component.html
+++ b/src/app/modules/shared/education/education-list/education-list.component.html
@@ -1,1 +1,32 @@
-<p>education-list works!</p>
+<div class="table-operations">
+    <button nz-button [routerLink]="['create']">Create Education</button>
+    <button nz-button>Sort age</button>
+    <button nz-button>Clear filters</button>
+    <button nz-button>Clear filters and sorters</button>
+</div>
+<nz-table #filterTable nzTableLayout="fixed">
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>Education Name</th>
+            <th>Description</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let data of educationList;index as i">
+            <td>{{ i + 1 }}</td>
+            <td>{{ data.educationName }}</td>
+            <td>{{ data.description }}</td>
+            <td>
+                <nz-button-group>
+                    <button nz-button nzType="primary" [routerLink]="['update/', data.educationId]"><i nz-icon
+                            nzType="edit" nzTheme="outline"></i></button>
+                    <button nz-button nzType="primary" (click)="deleteEducation(data.educationId)"><i nz-icon
+                            nzType="delete" nzTheme="outline"></i></button>
+                    <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
+                </nz-button-group>
+            </td>
+        </tr>
+    </tbody>
+</nz-table>
