--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
                         <a routerLink="dashboard/settings/education">Education</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
-                        <a routerLink="dashboard/settings/designation">Designation</a>
+                        <a routerLink="dashboard/settings/employment-status">Employment Status</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
                         <a routerLink="dashboard/settings/certification">Certification</a>
