--- a/src/app/modules/shared/employmentstatus/update-employment-status/update-employment-status.component.html
+++ b/src/app/modules/shared/employmentstatus/update-employment-status/update-employment-status.component.html
@@ -1,1 +1,21 @@
-<p>update-employment-status works!</p>
+<nz-page-header-title>Update Employment Status</nz-page-header-title>
+<form nz-form [formGroup]="employmentStatusForm" (ngSubmit)="onUpdate()">
+    <nz-form-item>
+        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="EmploymentStatusName" nzRequired>Employment Status Name
+        </nz-form-label>
+        <nz-form-control [nzSm]="14" [nzXs]="24">
+            <input nz-input type="text" formControlName="EmploymentStatusName" />
+        </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="Description" nzRequired>Description</nz-form-label>
+        <nz-form-control [nzSm]="14" [nzXs]="24">
+            <input nz-input type="text" formControlName="Description" />
+        </nz-form-control>
+    </nz-form-item>
+    <nz-form-item nz-row class="register-area">
+        <nz-form-control [nzSpan]="14" [nzOffset]="6">
+            <button nz-button nzType="primary">Save</button>
+        </nz-form-control>
+    </nz-form-item>
+</form>
