--- a/src/app/modules/shared/employmentstatus/employmentstatus-list/employmentstatus-list.component.html
+++ b/src/app/modules/shared/employmentstatus/employmentstatus-list/employmentstatus-list.component.html
@@ -1,1 +1,32 @@
-<p>employmentstatus-list works!</p>
+<div class="table-operations">
+    <button nz-button [routerLink]="['create']">Create Employment Status</button>
+    <button nz-button>Sort age</button>
+    <button nz-button>Clear filters</button>
+    <button nz-button>Clear filters and sorters</button>
+</div>
+<nz-table #filterTable nzTableLayout="fixed">
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>Education Name</th>
+            <th>Description</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let data of employmentStatusList;index as i">
+            <td>{{ i + 1 }}</td>
+            <td>{{ data.employmentStatusName }}</td>
+            <td>{{ data.description }}</td>
+            <td>
+                <nz-button-group>
+                    <button nz-button nzType="primary" [routerLink]="['update/', data.employmentStatusId]"><i nz-icon
+                            nzType="edit" nzTheme="outline"></i></button>
+                    <button nz-button nzType="primary" (click)="deleteEmploymentStatus(data.employmentStatusId)"><i nz-icon
+                            nzType="delete" nzTheme="outline"></i></button>
+                    <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
+                </nz-button-group>
+            </td>
+        </tr>
+    </tbody>
+</nz-table>
