--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,15 +27,15 @@
                     <li nz-menu-item nzMatchRouter>
                         <a routerLink="dashboard/settings/expense">Expense</a>
                     </li>
-                    <li nz-menu-item nzMatchRouter>
-                        <a routerLink="dashboard/hrm/attendance">Attendance</a>
-                    </li>
                 </ul>
             </li>
             <li nz-submenu nzTitle="HRM" nzIcon="appstore" nzTheme="outline">
                 <ul>
                     <li nz-menu-item nzMatchRouter>
-                        <a routerLink="dashboard/hrm/employee">Employee</a>
+                        <a routerLink="dashboard/hrm/attendance">Attendance</a>
+                    </li>
+                    <li nz-menu-item nzMatchRouter>
+                        <a routerLink="dashboard/hrm/archieved">Employee Archive</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
                         <a routerLink="dashboard/hrm/employee-attendance">Employee Attendance</a>
