--- a/src/app/modules/hrm/employee-archived/employee-archived-list/employee-archived-list.component.html
+++ b/src/app/modules/hrm/employee-archived/employee-archived-list/employee-archived-list.component.html
@@ -1,1 +1,38 @@
-<p>employee-archived-list works!</p>
+<div class="table-operations">
+    <button nz-button [routerLink]="['create']">Employee Archive </button>
+    <button nz-button>Sort age</button>
+    <button nz-button>Clear filters</button>
+    <button nz-button>Clear filters and sorters</button>
+</div>
+<nz-table #filterTable nzTableLayout="fixed">
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>EmployeeNumber</th>
+            <th>FirstName</th>
+            <th>LastName</th>
+            <th>Department</th>
+            <th>Supervisor</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let data of _archiveList;index as i">
+            <td>{{ i+1 }}</td>
+            <td>{{ data.employeeNumber }}</td>
+            <td>{{ data.firstName }}</td>
+            <td>{{ data.lastName }}</td>
+            <td>{{ data.department}}</td>
+            <td>{{ data.supervisor }}</td>
+            <td>
+                <nz-button-group>
+                    <button nz-button nzType="primary" [routerLink]="['update/',data.employeeArchivedId]"><i nz-icon
+                            nzType="edit" nzTheme="outline"></i></button>
+                    <button nz-button nzType="primary" (click)="deleteArchive(data.employeeArchivedId)"><i nz-icon
+                            nzType="delete" nzTheme="outline"></i></button>
+                    <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
+                </nz-button-group>
+            </td>
+        </tr>
+    </tbody>
+</nz-table>
